--- a/Manifests/dss.yml
+++ b/Manifests/dss.yml
@@ -5,12 +5,12 @@ metadata:
   name: yelp-camp-secrets
 type: Opaque
 data:
-  CLOUDINARY_CLOUD_NAME: ZGlpMnJvenRw
-  CLOUDINARY_KEY: NzU3NjQzMjU3ODkxMzY0
-  CLOUDINARY_SECRET: SHpBeTdPU3VCZjJhSUFSUm5Fd0tIcEVtc01N
-  MAPBOX_TOKEN: cGsuZXlKMUlqb2lZV1JwYW1GcGMzZGhiQ0lzSW1FaU9pSmpiSFl3TnpKemVHNHhaRzR5TW1wd1ltWm1OSFZ3YlhObUluMC5SVlFZc3UwUnZKZ0NGNTRrMjJkWDBB
-  DB_URL: bW9uZ29kYitzcnY6Ly9qYWlzd2FsYWRpMjQ2OnNjN1ZHU3lkN2RRQ2NMeTFAY2x1c3RlcjAuaXE2bXV0aC5tb25nb2RiLm5ldC8/cmV0cnlXcml0ZXM9dHJ1ZSZ3PW1ham9yaXR5JmFwcE5hbWU9Q2x1c3RlcjA=
-  SECRET: ZGV2b3Bzc2hhY2s=
+  CLOUDINARY_CLOUD_NAME: ZGg2amNpNm9vCg==
+  CLOUDINARY_KEY: MzE4ODExNjkzNjIzNDU3Cg==
+  CLOUDINARY_SECRET: aUowVGdJN3NhTzhMRXJ6MFNWWU5ST1FKS3JBCg==
+  MAPBOX_TOKEN: c2suZXlKMUlqb2lZWFpwYm1GemFHSnFJaXdpWVNJNkltTnNkbkoyWW5VNU9EQjNaVFF5Y1hGNlluTmljRFIwTTJnaWZRLlF3NmVaTXZ1TWV4UkJmVUxIV3NBMVEK
+  DB_URL: bW9uZ29kYitzcnY6Ly9hdmluYXNoYmpnb2t1OkYwT0RvaWlTSzd1QWlNellAYXZpbmFzaGRiLm50a3JqbXEubW9uZ29kYi5uZXQvP3JldHJ5V3JpdGVzPXRydWUmdz1tYWpvcml0eSZhcHBOYW1lPWF2aW5hc2hkYgo=
+  SECRET: YXZpbmFzaGRiCg==
 
 ---
 apiVersion: apps/v1
@@ -29,7 +29,7 @@ spec:
     spec:
       containers:
         - name: yelp-camp-container
-          image: adijaiswal/campa:latest
+          image: avinashbudhya/campa:latest
           ports:
             - containerPort: 3000
           env:
